<resources>
    <string name="app_name">UtuCanteenApp</string>
    <string name="taste_of_utu">Taste Of UTU</string>
    <string name="design_by_nneatroots">Design By\nNeatRoots</string>
    <string name="order_your_favorite_food">Order Your Favorite Food</string>
    <string name="waves_of_food">Waves Of Food</string>
    <string name="logo">logo</string>
    <string name="design_by_Rmm">"Designed By Rmm\n "</string>
    <string name="start_image">Start Image</string>
    <string name="quick_fresh_meals_just_for_utu_norder_pick_up_enjoy"><![CDATA[Quick & Fresh Meals, Just for UTU!\nOrder, Pick Up, Enjoy!]]></string>
    <string name="next">Next</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue With</string>
    <string name="button">Button</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t Have Account?</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">name</string>
    <string name="creat_account">Creat Account</string>
    <string name="sign_up_with">Sign Up With</string>
    <string name="already_have_account">Already Have Account</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_number">phone number\n</string>
    <string name="enrollment_number">enrollment number\n</string>
    <string name="explore_your_favourite_food">Explore Your Favourite Food</string>
    <string name="food_name">Food Name</string>
    <string name="_5">₹5</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>