<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:id="@+id/homeFragment"
        android:icon="@drawable/home"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/cart"
        android:id="@+id/cartFragment"
        android:icon="@drawable/cart"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/search"
        android:id="@+id/searchFragment"
        android:icon="@drawable/search"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/history"
        android:id="@+id/historyFragment"
        android:icon="@drawable/list"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/profile"
        android:id="@+id/profileFragment"
        android:icon="@drawable/user"/>
</menu>