<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/yeon_sung"
            android:text="@string/taste_of_utu"
            android:textColor="#000000"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lato"
            android:text="@string/order_your_favorite_food"
            android:textColor="@color/green_light"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/sign_up_here"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextEnrollment"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/profile"
            android:drawablePadding="15dp"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:hint="@string/enrollment_number"
            android:inputType="text"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/phone"
            android:drawablePadding="15dp"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextEnrollment"
            app:layout_constraintStart_toStartOf="@+id/editTextEnrollment"
            app:layout_constraintTop_toBottomOf="@+id/editTextEnrollment"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="15dp"
            android:elevation="5dp"
            android:ems="10"
            android:fontFamily="@font/lato"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextPhoneNumber"
            app:layout_constraintStart_toStartOf="@+id/editTextPhoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhoneNumber"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="325dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="15dp"
            android:elevation="5dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Loginbutton"
            android:layout_width="174dp"
            android:layout_height="62dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/gradient_button"
            android:fontFamily="@font/lato_bold"
            android:text="@string/creat_account"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/alreadyhavebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/lato"
            android:text="@string/already_have_account"
            android:textColor="@color/green_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/Loginbutton"
            app:layout_constraintStart_toStartOf="@+id/Loginbutton"
            app:layout_constraintTop_toBottomOf="@+id/Loginbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>
